force-app/main/default/objects/Account_Contact_Support__c/Account_Contact_Support__c.object-meta.xml
<CustomObject>
    <description>People in the business center there are support on the account</description>
    <label>Account Contact Support</label>
    <nameField>
        <label>Account Contact Support  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Contact Supports</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>