force-app/main/default/objects/Account_Contact_Support__c/fields/Firstname__c.field-meta.xml
<CustomField>
    <fullName>Firstname__c</fullName>
    <description>Firstname on the support in the business center</description>
    <label>Firstname</label>
    <length>3</length>
    <type>Text</type>
</CustomField>