force-app/main/default/objects/Account_Contact_Support__c/fields/Lastname__c.field-meta.xml
<CustomField>
    <fullName>Lastname__c</fullName>
    <description>Lastname on the contact i business center</description>
    <label>Lastname</label>
    <length>30</length>
    <type>Text</type>
</CustomField>