force-app/main/default/objects/Account_Contact_Support__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Phone number in the support</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>